fix alignment on heatmap month labels

--- a/common/components/Heatmap/Heatmap.module.scss
+++ b/common/components/Heatmap/Heatmap.module.scss
@@ -16,10 +16,10 @@
   justify-content: start;
   gap: 8px;
   width: max-content;
-  padding-block: 8px;
+  padding-top: 8px;
 }
 .heatmap-month {
-  width: 112px;
+  width: 116px;
   height: 24px;
 }
 .heatmap-container {
